--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div>
+        <a href="background.html">Para os backgrounds</a>
+    </div>
     <h1>Titulo principal</h1>
     <p>Texto é uma manifestação da linguagem, uma mensagem usada para transmitir 
         informação de um autor para um leitor. Um texto é uma manifestação da linguagem. 
